Update of Firefox tests to JDK 17.